services/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${TEAM_NAMESPACE}
  labels:
    toolkit.fluxcd.io/tenant: ${TEAM_NAME}
    istio-injection: enabled
