services/base/network-policy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-${TEAM_NAMESPACE}-internal
  namespace: ${TEAM_NAMESPACE}
spec:
  ingress:
    - action: Allow
      protocol: TCP
  egress:
    - action: Allow
      protocol: TCP
